fix forgot password padding, remove margin on tips page on mobile, left cont div now is a touch target to open admin nav drawer, loading indicator on admin page stays on until finished loading, add cart loader

--- a/public/admin.css
+++ b/public/admin.css
@@ -861,7 +861,7 @@ body, html{
 }
 
 /* resizing css code */
-@media only screen and (max-width: 1200px){
+@media only screen and (max-width: 1000px){
 	#right_header_div{
 		width: 0%;
 	}
@@ -954,6 +954,11 @@ body, html{
 	}
 	
 	#feedback_mark_resolved{
+		margin-right: 0px;
+	}
+	
+	#info_ul{
+		margin-left: 0px;
 		margin-right: 0px;
 	}
 }
