--- a/public/index.css
+++ b/public/index.css
@@ -378,7 +378,7 @@ h3{
 	color: #EF5350;
 	font-weight: bold;
 	padding-top: 10px;
-	padding-bottom: 25px;
+	padding-bottom: 20px;
 	padding-left: 20px;
 	padding-right: 20px;
 	margin-top: 15px;
@@ -397,6 +397,7 @@ h3{
 	padding-bottom: 10px;
 	padding-left: 20px;
 	padding-right: 20px;
+	margin-top: 15px;
 }
 
 #sign_in_explain{
